did everything for contacts
